; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo.c_wait_vo.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo.c_wait_vo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.TYPE_2__*, %struct.vo_internal* }
%struct.TYPE_2__ = type { i32 (%struct.vo*, i32)* }
%struct.vo_internal = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vo*, i32)* @wait_vo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wait_vo(%struct.vo* %0, i32 %1) #0 {
  %3 = alloca %struct.vo*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.vo_internal*, align 8
  store %struct.vo* %0, %struct.vo** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.vo*, %struct.vo** %3, align 8
  %7 = getelementptr inbounds %struct.vo, %struct.vo* %6, i32 0, i32 1
  %8 = load %struct.vo_internal*, %struct.vo_internal** %7, align 8
  store %struct.vo_internal* %8, %struct.vo_internal** %5, align 8
  %9 = load %struct.vo*, %struct.vo** %3, align 8
  %10 = getelementptr inbounds %struct.vo, %struct.vo* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32 (%struct.vo*, i32)*, i32 (%struct.vo*, i32)** %12, align 8
  %14 = icmp ne i32 (%struct.vo*, i32)* %13, null
  br i1 %14, label %15, label %24

15:                                               ; preds = %2
  %16 = load %struct.vo*, %struct.vo** %3, align 8
  %17 = getelementptr inbounds %struct.vo, %struct.vo* %16, i32 0, i32 0
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32 (%struct.vo*, i32)*, i32 (%struct.vo*, i32)** %19, align 8
  %21 = load %struct.vo*, %struct.vo** %3, align 8
  %22 = load i32, i32* %4, align 4
  %23 = call i32 %20(%struct.vo* %21, i32 %22)
  br label %28

24:                                               ; preds = %2
  %25 = load %struct.vo*, %struct.vo** %3, align 8
  %26 = load i32, i32* %4, align 4
  %27 = call i32 @vo_wait_default(%struct.vo* %25, i32 %26)
  br label %28

28:                                               ; preds = %24, %15
  %29 = load %struct.vo_internal*, %struct.vo_internal** %5, align 8
  %30 = getelementptr inbounds %struct.vo_internal, %struct.vo_internal* %29, i32 0, i32 1
  %31 = call i32 @pthread_mutex_lock(i32* %30)
  %32 = load %struct.vo_internal*, %struct.vo_internal** %5, align 8
  %33 = getelementptr inbounds %struct.vo_internal, %struct.vo_internal* %32, i32 0, i32 0
  store i32 0, i32* %33, align 4
  %34 = load %struct.vo_internal*, %struct.vo_internal** %5, align 8
  %35 = getelementptr inbounds %struct.vo_internal, %struct.vo_internal* %34, i32 0, i32 1
  %36 = call i32 @pthread_mutex_unlock(i32* %35)
  ret void
}

declare dso_local i32 @vo_wait_default(%struct.vo*, i32) #1

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
